--- a/src/components/global-ui/Navigation.astro
+++ b/src/components/global-ui/Navigation.astro
@@ -3,19 +3,19 @@ import NavContainer from './NavContainer';
 
 const navItems = [
 	{
-		title: 'Home',
-		icon_url: 'spap-icons/icons/PNG/black_icon.png',
-		href_url: '/home',
+		title: 'Portfolio',
+		icon_url: 'icons/open_book.svg',
+		href_url: '/portfolio',
 	},
 	{
 		title: 'Home',
 		icon_url: 'spap-icons/icons/PNG/black_icon.png',
-		href_url: '/home',
+		href_url: '/',
 	},
 	{
-		title: 'Home',
-		icon_url: 'spap-icons/icons/PNG/black_icon.png',
-		href_url: '/home',
+		title: 'Contact',
+		icon_url: 'icons/user_icon.svg',
+		href_url: '/contact',
 	},
 ];
 ---
