--- a/src/layouts/RootLayout.astro
+++ b/src/layouts/RootLayout.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from '../components/global-ui/Footer.astro';
 import Navigation from '../components/global-ui/Navigation.astro';
 
 interface Props {
@@ -21,5 +22,6 @@ const { title } = Astro.props;
 	<body class="bg-primary-dark min-h-screen">
 		<slot />
 		<Navigation />
+		<Footer />
 	</body>
 </html>
