--- a/src/components/global-ui/Navigation.astro
+++ b/src/components/global-ui/Navigation.astro
@@ -3,13 +3,13 @@ import NavContainer from './NavContainer';
 
 const navItems = [
 	{
-		title: 'Portfolio',
-		icon_url: 'icons/open_book.svg',
-		href_url: '/portfolio',
+		title: 'Solutions',
+		icon_url: 'icons/lightbulb_icon.svg',
+		href_url: '/solutions',
 	},
 	{
 		title: 'Home',
-		icon_url: 'spap-icons/icons/PNG/black_icon.png',
+		icon_url: 'icons/home_icon.svg',
 		href_url: '/',
 	},
 	{
