--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -16,7 +16,7 @@ import ContactButtonGroup from '../components/global-ui/ContactButtonGroup.astro
 					><style>
 						.cls-1 {
 							fill: #fff;
-							stroke-width: 0px;
+							strokewidth: 0px;
 						}
 					</style></defs
 				><g id="Layer_1-2"
