--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -235,5 +235,20 @@ import SocialLinks from '../components/global-ui/SocialLinks.tsx';
 			</h2>
 			<TestimonialContainer />
 		</section>
+		<section class="lg:mx-10 mx-auto">
+			<h1 class="text-4xl lg:text-4xl mt-32 text-white mb-4">
+				Subscribe to my Newsletter
+			</h1>
+			<div class="rounded-xl">
+				<iframe
+					class="rounded-xl"
+					src="https://embeds.beehiiv.com/ad31a6a5-6362-488a-a30a-bd035dfb2d2b"
+					data-test-id="beehiiv-embed"
+					width="100%"
+					height="320"
+					style="border-radius: 4px; border: 2px solid #e5e7eb; margin: 0; background-color: transparent;"
+				></iframe>
+			</div>
+		</section>
 	</main>
 </RootLayout>
