started on contact form

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -118,7 +118,7 @@ import SocialLinks from '../components/global-ui/SocialLinks.tsx';
 				website & app development services.
 			</h1>
 			<a
-				class="bg-indigo-600 p-4 text-white rounded-full text-center mt-4 font-semibold flex justify-center"
+				class="bg-primary hover:ring-2 hover:bg-transparent hover:ring-primary ease-in-out p-5 text-white rounded-md text-center mt-4 font-semibold flex justify-center"
 				>Book a Free 30-Minute Consultation <svg
 					class="mx-2"
 					class="inline"
@@ -201,7 +201,7 @@ import SocialLinks from '../components/global-ui/SocialLinks.tsx';
 			</div>
 			<a
 				href="/solutions"
-				class="block bg-indigo-600 w-full text-center mx-auto text-lg p-4 rounded-full text-primary-white font-semibold mt-4 lg:p-8 lg:text-xl"
+				class="block bg-primary w-full text-center mx-auto text-lg p-4 rounded-full text-primary-white font-semibold mt-4 lg:p-8 lg:text-xl"
 			>
 				See My Work
 			</a>
@@ -220,7 +220,7 @@ import SocialLinks from '../components/global-ui/SocialLinks.tsx';
 				started.
 			</p>
 			<a
-				class="bg-indigo-600 w-full text-center mx-auto text-lg p-4 lg:p-8 rounded-full text-primary-white font-semibold"
+				class="bg-primary w-full text-center mx-auto text-lg p-4 lg:p-8 rounded-full text-primary-white font-semibold"
 				>Schedule Free Consultation</a
 			>
 		</section>
